<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewAboutMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="90dip"
            android:text="@string/about_me"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/developedbyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="23dip"
            android:text="@string/developed_by_fatin_nabihah_binti_saidana"
            android:textIsSelectable="false"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/groupTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/group_rcdcs2515b"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/studNumTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/student_number_2022977865"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/programmeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/programme_code_cs251"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/websiteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dip"
            android:text="@string/visit_my_website_in_github_https_github_com_fatinnabihah_electricitybillapp"
            android:textSize="16sp"
            android:autoLink="web"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom|center"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/copyrightTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_2024_electricity_bill_app_all_right_reserved" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>